<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">ArkanoidWay</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="arkanoid_game">Arkanoid Game</string>
    <string name="let_s_start">Let\'s start</string>
    <string name="play">play</string>
    <string name="exit">exit</string>
    <string name="quiz_game">Quiz Game</string>
    <string name="select_category">Select category</string>
    <string name="geography">Geography</string>
    <string name="sports">sports</string>
    <string name="which_country_is_the_biggest_one">Which country is the biggest one?</string>
    <string name="germany">Germany</string>
    <string name="russia">russia</string>
    <string name="france">France</string>
    <string name="italy">Italy</string>
    <string name="totalscore" tools:ignore="ExtraTranslation">Total Score</string>
    <string name="total_score">Total Score</string>
    <string name="_0">0</string>
    <string name="play_again">Play again</string>
    <string name="close_app">Close App</string>
    <string name="final_score">Final score:</string>
    <string name="where_was_mo_farah_born">Where was Mo Farah born</string>
    <string name="india">India</string>
    <string name="usa">usa</string>
    <string name="somalia">somalia</string>
    <string name="senegal">senegal</string>
</resources>