<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="#ffcccc"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context="com.example.quizway.FinalScore">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/final_score"
        android:textColor="#000"
        android:gravity="center"
        android:textSize="20sp"
        android:id="@+id/total_score" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#000"
        android:text="@string/_0"
        android:id="@+id/score"
        tools:ignore="RelativeOverlap" />

    <Button
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:id="@+id/play_again"
        android:layout_marginTop="25dp"
        android:text="@string/play_again"/>

    <Button
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/close_app"
        android:id="@+id/close_app"/>


</LinearLayout>