<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="#b3b3ff"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".HomeActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/start"
        android:text="@string/let_s_start"
        android:textSize="30sp"
        android:gravity="center"
        android:textColor="#000"
        />

    <Button
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:id="@+id/play"
        android:layout_marginTop="25dp"
        android:text="@string/play"/>

    <Button
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/exit"
        android:id="@+id/exit"/>



</LinearLayout>