<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="#ccffcc"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".SelectCategory">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/start"
        android:text="@string/select_category"
        android:textSize="30sp"
        android:gravity="center"
        android:textColor="#000"
        />

    <Button
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:id="@+id/geography"
        android:layout_marginTop="25dp"
        android:text="@string/geography"/>

    <Button
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/sports"
        android:id="@+id/sports"/>

</LinearLayout>